--- a/goodside/gov.html
+++ b/goodside/gov.html
@@ -85,6 +85,101 @@
       </div>
     </div>
 
+    <!--content-->
+
+    <div class="container mt-3">
+      <table class="table table-bordered table-sm p-3 text-center">
+        <thead>
+          <tr class="p-3 mb-2 bg-dark text-white">
+            <th scope="col" class="align-middle"><i class='bx bx-chevrons-down'></i></th>
+            <th scope="col">Name</th>
+            <th scope="col">Position</th>
+            <th scope="col">Political Parties</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr class="table-light">
+            <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
+            <td><b style="color:darkorange;">William Scout</b></td>
+            <td><b style="color:darkorange;">Governor</b></td>
+            <td><b style="color:blue;"> Democratic party </b></b></td>
+          </tr>
+          <tr class="table-light">
+            <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
+            <td><b style="color:darkorange;"> - </b></td>
+            <td><b style="color:darkorange;">Deputy Governor</b></td>
+            <td><b style="color:black;"> - </b></b></td>
+          </tr>
+          <tr class="table-light">
+            <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
+            <td><b style="color:darkorange;"> - </b></td>
+            <td><b style="color:darkorange;">Regional People's Representative</b></td>
+            <td><b style="color:black;"> - </b></b></td>
+          </tr>
+          <tr class="table-light">
+            <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
+            <td><b style="color:darkorange;"> - </b></td>
+            <td><b style="color:darkorange;">Secretary Regional</b></td>
+            <td><b style="color:black;"> - </b></b></td>
+          </tr>
+          <tr class="table-light">
+            <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
+            <td><b style="color:darkorange;"> - </b></td>
+            <td><b style="color:darkorange;">Governor's Staff</b></td>
+            <td><b style="color:black;"> - </b></b></td>
+          </tr>
+          <tr class="table-light">
+            <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
+            <td><b style="color:darkorange;"> - </b></td>
+            <td><b style="color:darkorange;">Minister of Religion</b></td>
+            <td><b style="color:black;"> - </b></b></td>
+          </tr>
+          <tr class="table-light">
+            <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
+            <td><b style="color:darkorange;"> - </b></td>
+            <td><b style="color:darkorange;">Minister of Law</b></td>
+            <td><b style="color:black;"> - </b></b></td>
+          </tr>
+          <tr class="table-light">
+            <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
+            <td><b style="color:darkorange;"> - </b></td>
+            <td><b style="color:darkorange;">Lawyer</b></td>
+            <td><b style="color:black;"> - </b></b></td>
+          </tr>
+          <tr class="table-light">
+            <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
+            <td><b style="color:darkorange;"> - </b></td>
+            <td><b style="color:darkorange;">Treasurer</b></td>
+            <td><b style="color:black;"> - </b></b></td>
+          </tr>
+          <tr class="table-light">
+            <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
+            <td><b style="color:darkorange;"> - </b></td>
+            <td><b style="color:darkorange;">Licensor</b></td>
+            <td><b style="color:black;"> - </b></b></td>
+          </tr>
+          <tr class="table-light">
+            <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
+            <td><b style="color:darkorange;"> - </b></td>
+            <td><b style="color:darkorange;">Secretary</b></td>
+            <td><b style="color:black;"> - </b></b></td>
+          </tr>
+          <tr class="table-light">
+            <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
+            <td><b style="color:darkorange;"> - </b></td>
+            <td><b style="color:darkorange;">Bodyguard</b></td>
+            <td><b style="color:black;"> - </b></b></td>
+          </tr>
+          <tr class="table-light">
+            <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
+            <td><b style="color:darkorange;"> - </b></td>
+            <td><b style="color:darkorange;">Driver</b></td>
+            <td><b style="color:black;"> - </b></b></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
     <!--copyright-->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
